<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminEditWeekActivity">

    <TextView
        android:id="@+id/adminEditWeek_text_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/adminEditWeek_text_monday"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adminEditWeek_text_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/adminEditWeek_text_tuesday"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/adminEditWeek_text_monday"
        app:layout_constraintTop_toBottomOf="@+id/adminEditWeek_text_monday" />

    <TextView
        android:id="@+id/adminEditWeek_text_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/adminEditWeek_text_wednesday"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/adminEditWeek_text_tuesday"
        app:layout_constraintTop_toBottomOf="@+id/adminEditWeek_text_tuesday" />

    <TextView
        android:id="@+id/adminEditWeek_text_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/adminEditWeek_text_thursday"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/adminEditWeek_text_wednesday"
        app:layout_constraintTop_toBottomOf="@+id/adminEditWeek_text_wednesday" />

    <TextView
        android:id="@+id/adminEditWeek_text_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/adminEditWeek_text_friday"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/adminEditWeek_text_thursday"
        app:layout_constraintTop_toBottomOf="@+id/adminEditWeek_text_thursday" />

    <TextView
        android:id="@+id/adminEditWeek_text_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/adminEditWeek_text_saturday"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/adminEditWeek_text_friday"
        app:layout_constraintTop_toBottomOf="@+id/adminEditWeek_text_friday" />

    <TextView
        android:id="@+id/adminEditWeek_text_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/adminEditWeek_text_sunday"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/adminEditWeek_text_saturday"
        app:layout_constraintTop_toBottomOf="@+id/adminEditWeek_text_saturday" />

    <Button
        android:id="@+id/adminEditWeek_button_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/adminEditWeek_button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adminEditWeek_text_monday"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/adminEditWeek_button_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/adminEditWeek_button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adminEditWeek_text_tuesday" />

    <Button
        android:id="@+id/adminEditWeek_button_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/adminEditWeek_button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adminEditWeek_text_wednesday" />

    <Button
        android:id="@+id/adminEditWeek_button_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/adminEditWeek_button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adminEditWeek_text_thursday" />

    <Button
        android:id="@+id/adminEditWeek_button_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/adminEditWeek_button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adminEditWeek_text_friday" />

    <Button
        android:id="@+id/adminEditWeek_button_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/adminEditWeek_button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adminEditWeek_text_saturday" />

    <Button
        android:id="@+id/adminEditWeek_button_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/adminEditWeek_button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adminEditWeek_text_sunday" />

    <Button
        android:id="@+id/adminEditWeek_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/adminEditWeek_button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminEditWeek_button_sunday" />
</androidx.constraintlayout.widget.ConstraintLayout>