<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/login_text_login"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/login_editText_login"
        app:layout_constraintStart_toStartOf="@+id/login_editText_login"
        tools:text="@string/login_text_login" />

    <EditText
        android:id="@+id/login_editText_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="115denis511@gmail.com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_text_password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/login_editText_login"
        app:layout_constraintTop_toBottomOf="@+id/login_editText_login"
        tools:text="@string/login_text_password" />

    <EditText
        android:id="@+id/login_editText_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="admin1"
        app:layout_constraintStart_toStartOf="@+id/login_text_password"
        app:layout_constraintTop_toBottomOf="@+id/login_text_password" />

    <Button
        android:id="@+id/login_button_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_button_enter"
        app:layout_constraintEnd_toEndOf="@+id/login_editText_password"
        app:layout_constraintStart_toStartOf="@+id/login_editText_password"
        app:layout_constraintTop_toBottomOf="@+id/login_editText_password"
        tools:text="@string/login_button_enter" />

    <Button
        android:id="@+id/login_button_singUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_button_singUp"
        app:layout_constraintEnd_toEndOf="@+id/login_button_enter"
        app:layout_constraintStart_toStartOf="@+id/login_button_enter"
        app:layout_constraintTop_toBottomOf="@+id/login_button_enter" />

</androidx.constraintlayout.widget.ConstraintLayout>